# sequential-thinking-mcp

./: .gitignore  CODING_INTEGRATION.md  GUIDE.md  INSTALL.md  MIGRATION.md  README.md  compatibility.py  cross_system.py  engines.py  main.py  mcp_resources.py  mcp_tools.py  memory.db  models.py  plugins.py  pyproject.toml  session_manager.py  test_mcp.py  test_refactored.py
tests/: __init__.py  test_coding_integration.py
