[project]
name = "enhanced-sequential-thinking-mcp"
version = "1.0.0"
description = "Advanced sequential thinking MCP server with first principles support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[project.scripts]
sequential-thinking-mcp = "main:main"
